# openclaw_minimal

./: .env.example  CLAUDE.md  README.md  pyproject.toml  requirements.txt
.claude/: settings.json
.claude/hooks/: block-dotenv.sh
data/: agent.db
data/workspace/: goals.md  sqrt10.txt  sqrt123.txt  timed_heartbeat.txt
data/workspace/notes/: todo.txt  todo2.txt
plugins/: calculator_plugin.py  echo_plugin.py  shell_plugin.py  web_fetch_plugin.py
src/openclaw_lite/: app_factory.py  config.py  gateway.py  main.py  memory.py  plugin_loader.py  runtime.py  scheduler.py  schemas.py  utils.py
src/openclaw_lite.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
src/openclaw_lite/providers/: base.py  demo.py  openai_compatible.py
src/openclaw_lite/tools/: base.py  files.py  system.py
tests/: test_runtime.py
